Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,9 @@ stages:
     jobs:
       - job: BuildAndPush
         pool:
-          vmImage: 'ubuntu-latest'
+          name: 'bratva'
+          demands:
+            - agent.name -equals my-linux-agent
         steps:
           - task: NodeTool@0
             inputs:
