--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,4 +72,4 @@ stages:
               namespace: default
               command: apply
               useConfigurationFile: true
-              configuration: 'k8s/' 
+              configuration: 'terraform/' 
